--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ DB_PASSWORD=nhi111
 DB_NAME=learndb
 
 APP_URL=mywebsite.com
-SUPPORT_EMAIL=suppport@${APP_URL}.com
+SUPPORT_EMAIL=suppport@${APP_URL}
